--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "@whiskeysockets/baileys": "^6.7.18",
     "express": "^4.18.2",
     "node-cache": "^5.1.2",
-    "pino": "^8.19.0",
+    "pino": "^8.19.0"
   }
 }
